<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="no.glv.android.stdntworkflow.TaskActivity" >

    <item
        android:id="@+id/task.action.Update"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/task_menu_update"/>
    <item
        android:id="@+id/task.action.Delete"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="9"
        android:showAsAction="ifRoom"
        android:title="@string/task_menu_delete"/>
    <item
        android:id="@+id/menu.overflow"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/task.action.addStudent"
                android:orderInCategory="100"
                android:showAsAction="ifRoom"
                android:icon="@drawable/ic_action_add_student"
                android:title="@string/task_menu_addStudent"/>
            <item
                android:id="@+id/task.action.addClass"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:icon="@drawable/ic_action_add_stdclass"
                android:title="@string/task_menu_addClass"/>
            <item
                android:id="@+id/task.action.close"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/task_menu_close"/>
        </menu>
    </item>

</menu>