<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="no.glv.android.stdntworkflow.MainActivity" >

    <item
        android:id="@+id/menu.newTask"
        android:icon="@drawable/ic_action_task"
        android:orderInCategory="11"
        android:showAsAction="always"
        android:title="@string/action_newTask"/>
    
    <item
        android:id="@+id/menu.overflow"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/menu.resetDB"
                android:icon="@drawable/ic_action_reset"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_resetDB"/>
            <item
                android:id="@+id/menu.listDB"
                android:icon="@drawable/ic_action_storage"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_listDB"/>
        </menu>
    </item>

</menu>