<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="no.glv.android.stdntworkflow.StdInfoFragment" >

    <TextView
        android:id="@+id/TV.info.p2Name"
        style="@style/TV.std.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/stdinfo_name" />

    <EditText
        android:id="@+id/ET.info.p2Name"
        style="@style/ET.stdInfo"
        android:layout_alignBottom="@+id/TV.info.p2Name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/TV.info.p2Name"
        android:layout_toRightOf="@id/TV.info.p2Name"
        android:ems="20" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TV.info.p2Mail"
        style="@style/TV.std.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV.info.p2Name"
        android:layout_marginTop="10sp"
        android:text="@string/stdinfo_mail" />

    <EditText
        android:id="@+id/ET.info.p2Mail"
        style="@style/ET.stdInfo"
        android:layout_alignBottom="@id/TV.info.p2Mail"
        android:layout_toEndOf="@id/TV.info.p2Mail"
        android:layout_toRightOf="@id/TV.info.p2Mail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/TV.info.p2Phone"
        style="@style/TV.std"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV.info.p2Mail"
        android:layout_marginTop="10sp"
        android:text="@string/stdinfo_phone_mobile" />

    <EditText
        android:id="@+id/ET.info.p2Phone"
        style="@style/ET.stdInfo"
        android:layout_alignBottom="@id/TV.info.p2Phone"
        android:layout_toEndOf="@id/TV.info.p2Phone"
        android:layout_toRightOf="@id/TV.info.p2Phone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:ems="10" >
    </EditText>

</RelativeLayout>