<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="no.glv.android.stdntworkflow.TaskInfoFragment" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TV.task.header"
            style="@style/TV.header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def" />

        <RelativeLayout
            android:id="@+id/LL.task.name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV.task.header"
            android:layout_marginTop="15sp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TV.task.name"
                style="@style/TV.std.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/task_name" />

            <EditText
                android:id="@+id/ET.task.name"
                style="@style/ET.L"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/TV.task.name"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:layout_toEndOf="@id/TV.task.name"
                android:layout_toRightOf="@id/TV.task.name"
                android:inputType="text" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LL.task.desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL.task.name"
            android:layout_marginTop="10sp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TV.task.desc"
                style="@style/TV.std.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/task_desca" />

            <EditText
                android:id="@+id/ET.task.desc"
                style="@style/ET.L"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:focusable="true"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL.task.date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL.task.desc"
            android:layout_marginTop="10sp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TV.task.date"
                style="@style/TV.std.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/task_date" />

            <Button
                android:id="@+id/BTN.task.date"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:background="@drawable/calendar"
                android:text="Button" />

            <EditText
                android:id="@+id/ET.task.date"
                style="@style/ET.L"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:focusable="true"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL.task.date"
            android:layout_marginTop="10sp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/TV.std.bold"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    android:gravity="end"
                    android:text="@string/task_student_count" />

                <TextView
                    android:id="@+id/TV.task.studentCount"
                    style="@style/TV.std.L.blue"
                    android:layout_marginLeft="5sp"
                    android:layout_marginStart="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/TV.std.bold"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    android:gravity="end"
                    android:text="@string/task_pending_count" />

                <TextView
                    android:id="@+id/TV.task.pendingCount"
                    style="@style/TV.std.L.blue"
                    android:layout_marginLeft="5sp"
                    android:layout_marginStart="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/TV.std.bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:gravity="end"
                    android:text="@string/task_handin_count" />

                <TextView
                    android:id="@+id/TV.task.handinCount"
                    style="@style/TV.std.L.blue"
                    android:layout_marginLeft="5sp"
                    android:layout_marginStart="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>