<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="no.glv.android.stdntworkflow.TaskInfoFragment" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TV.task.header"
            style="@style/TV.header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def" />

        <RelativeLayout
            android:id="@+id/LL.task.name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV.task.header"
            android:layout_marginTop="15sp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TV.task.name"
                style="@style/TV.std.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/task_name" />

            <EditText
                android:id="@+id/ET.task.name"
                style="@style/ET.L"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/TV.task.name"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:layout_toEndOf="@id/TV.task.name"
                android:layout_toRightOf="@id/TV.task.name"
                android:inputType="text" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LL.task.desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL.task.name"
            android:layout_marginTop="10sp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TV.task.desc"
                style="@style/TV.std.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/task_desca" />

            <EditText
                android:id="@+id/ET.task.desc"
                style="@style/ET.L"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL.task.date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL.task.desc"
            android:layout_marginTop="10sp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TV.task.date"
                style="@style/TV.std.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/task_date" />

            <EditText
                android:id="@+id/ET.task.date"
                style="@style/ET.L"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/BTN.task.update"
            style="@style/BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL.task.date"
            android:layout_marginTop="20sp"
            android:text="Oppdater!" />
    </RelativeLayout>

</ScrollView>